--- a/.prettierrc
+++ b/.prettierrc
@@ -1,11 +1,11 @@
 {
-  "singleQuote": true,
+  "singleQuote": false,
   "tabWidth": 2,
   "useTabs": false,
   "bracketSpacing": true,
   "bracketSameLine": true,
   "arrowParens": "always",
   "trailingComma": "es5",
-  "printWidth": 80,
+  "printWidth": 100,
   "semi": true
 }
