--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "normalize.css": "^8.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-jsx-parser": "^2.1.0",
     "react-query": "^3.39.3",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.2",
